--- a/PrjPilot.UI/src/app/app.component.html
+++ b/PrjPilot.UI/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">PROJETO PILOTO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,10 +11,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Anúncios</a>
+                    <a class="nav-link active" aria-current="page" href="/todos-anuncios">Anúncios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/produtos">Produtos</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/produtos">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="/categorias">Categorias</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/login">Login</a>
