--- a/PrjPilot.UI/src/app/components/products/list-products/list-products.component.html
+++ b/PrjPilot.UI/src/app/components/products/list-products/list-products.component.html
@@ -1,31 +1,26 @@
-<p>list-products works!</p>
-<table class="table table-dark table-striped">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry the Bird</td>
-            <td>West</td>
-            <td>@twitter</td>
-        </tr>
-    </tbody>
-</table>
+
+    <table class="table table-dark table-striped" *ngIf="products && products.length > 0 ">
+        <thead>
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Descrição</th>
+                <th scope="col">Preço R$</th>
+                <th scope="col">Quantidade</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let p of products">
+                <td>{{p.id}}</td>
+                <td>{{p.name}}</td>
+                <td>{{p.description}}</td>
+                <td>{{p.price}}</td>
+                <td>{{p.quantity}}</td>
+                <td>
+                    <input class="btn btn-primary" type="submit" value="Criar anuncio">
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <p *ngIf="!products || products.length <= 0">Nenhum produto cadastrado.</p>
