Implementação para componente produto
Ajustes iniciais para implementar funcionalidade para telas de produtos.

--- a/PrjPilot.UI/src/app/components/products/list-products/list-products.component.html
+++ b/PrjPilot.UI/src/app/components/products/list-products/list-products.component.html
@@ -1,4 +1,8 @@
 
+    <h1>Lista de Produtos</h1>
+    <button type="button" id="btnAddProduct" class="btn btn-primary">
+        Incluir Produto
+      </button>
     <table class="table table-dark table-striped" *ngIf="products && products.length > 0 ">
         <thead>
             <tr>
