--- a/PrjPilot.UI/src/app/components/products/addproduct/addproduct.component.html
+++ b/PrjPilot.UI/src/app/components/products/addproduct/addproduct.component.html
@@ -1,1 +1,24 @@
-<p>addproduct works!</p>
+<div class="container">
+<form [formGroup]="formProduct" class="row g-3" (ngSubmit)="submitForm()">   
+    <div class="col-6">
+      <label for="name" class="form-label">Nome Produto</label>
+      <input type="text" class="form-control" id="name" formControlName="name" placeholder="">
+    </div>
+    <div class="col-6">
+      <label for="description" class="form-label">Descrição</label>
+      <input type="text" class="form-control" id="description" formControlName="description" placeholder="">
+    </div>
+    <div class="col-md-6">
+      <label for="price" class="form-label">Valor</label>
+      <input type="number" class="form-control" id="price" formControlName="price">
+    </div>
+    <div class="col-md-3">
+        <label for="quantity" class="form-label">Quantidade</label>
+        <input type="number" class="form-control" id="quantity" formControlName="quantity">
+      </div>
+    
+    <div class="col-12">
+      <button type="submit" [disabled]="formProduct.invalid" class="btn btn-primary">Salvar Produto</button>
+    </div>
+  </form>
+</div>
