Implementações editar produto
Incluído rota, para edição de produto.
Incluído Componente para editar produto no app module.
Incluído disabled quando formulário estiver preenchido de forma correte e botão voltar com método que retorna para lista de produtos.
Incluído no componente de adicionar produto, método que retorna para lista de produtos.
Criado formulário para editar produto.
Criado métodos responsáveis pelas ações de editar um produto.
Incluído botão de editar um produto na lista de produtos.
Refatorado classe de Produto, antes atributo era string, agora é um number.
Inclusão de métodos na camada de serviço, para obter um produto por id e atualizar um produto, com suas respectivas rotas para os endpoints no backend.

--- a/PrjPilot.UI/src/app/components/products/addproduct/addproduct.component.html
+++ b/PrjPilot.UI/src/app/components/products/addproduct/addproduct.component.html
@@ -18,7 +18,8 @@
       </div>
     
     <div class="col-12">
-      <button type="submit" [disabled]="formProduct.invalid" class="btn btn-primary">Salvar Produto</button>
+      <button type="submit" [disabled]="formProduct.invalid" class="btn btn-primary">Salvar Produto</button>&nbsp;
+      <button (click)="listProducts()" class="btn btn-outline-secondary">Voltar</button>
     </div>
   </form>
 </div>
