--- a/PrjPilot.UI/src/app/components/products/list-products/list-products.component.html
+++ b/PrjPilot.UI/src/app/components/products/list-products/list-products.component.html
@@ -9,9 +9,10 @@
                 <th scope="col">Id</th>
                 <th scope="col">Nome</th>
                 <th scope="col">Descrição</th>
+                <th scope="col">Categoria</th>
                 <th scope="col">Preço R$</th>
                 <th scope="col">Quantidade</th>
-                <th>Ação</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -19,6 +20,7 @@
                 <td>{{p.id}}</td>
                 <td>{{p.name}}</td>
                 <td>{{p.description}}</td>
+                <td>Categoria</td>
                 <td>{{p.price}}</td>
                 <td>{{p.quantity}}</td>
                 <td>
